# batch-transcriber

./: .gitignore  README-FRIEND-MACOS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: build-workers.sh  bulk-transcribe.sh  bundle-app.sh  package-macos.sh  prepare-bundled-worker.sh  release-macos.sh  worker-release-scripts.test.ts
src/: App.settings.test.tsx  App.test.tsx  App.tsx
src-tauri/: Batch_Transcriber.entitlements  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  notifications.rs
src/components/: TitleBar.tsx
src/hooks/: useProviders.test.tsx  useProviders.ts  useQueue.test.ts  useQueue.ts  useTauriEvents.test.tsx  useTauriEvents.ts
src/lib/: tauri-commands.test.ts  tauri-commands.ts
src/styles/: globals.css  globals.test.ts
src/test/: setup.ts
src/types/: backend.ts  events.ts  index.test.ts  index.ts  providers.ts  queue.ts  raw-modules.d.ts
swift-worker/: Package.resolved  Package.swift
tests/: setup.ts
tests/e2e/: helpers.ts  (+2 more)
workers/faster-whisper-batch/: pyproject.toml
workers/faster-whisper-batch/faster_whisper_batch/: __init__.py  __main__.py  events.py  gpu_utils.py  worker.py
workers/faster-whisper-batch/tests/: test_cli.py  test_events.py  test_gpu_utils.py  test_worker.py
workers/whisper-batch/: pyproject.toml
workers/whisper-batch/tests/: test_cli.py  test_events.py  test_model_manager.py  test_worker.py
workers/whisper-batch/whisper_batch/: __init__.py  __main__.py  events.py  model_manager.py  worker.py
(+52 files in other folders)
