[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-whisper-batch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.0.0",
  "ctranslate2>=4.0",
]

[project.scripts]
faster-whisper-batch = "faster_whisper_batch.__main__:main"
faster_whisper_batch = "faster_whisper_batch.__main__:main"
